--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,69 @@
     --foreground: #ededed;
   }
 }
+ @font-face {
+  font-family: 'Cascadia Code';
+  src: url('/fonts/CascadiaCode.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+} 
+
+@font-face {
+  font-family: 'Monument Black';
+  src: url('/fonts/PPMonumentExtended-Black.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+} 
+
+@font-face {
+  font-family: 'Monument Regular';
+  src: url('/fonts/PPMonumentExtended-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+} 
 
 body {
-  background: var(--background);
+  background: black;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.cascadia-code {
+  font-family: 'Cascadia Code';
+}
+
+.monument-black {
+  font-family: 'Monument Black';
+}
+
+.monument-regular {
+  font-family: 'Monument Regular';
+}
+
+.container {
+  padding-right: 24px;
+  padding-left: 24px;
+}
+
+.tool-sticker {
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 8px 16px;
+  border-radius: 20px;
+  font-family: 'Monument Regular';
+  font-weight:  400;
+  margin-right: 12px;
+  margin-bottom: 12px;
+  font-size: 10px;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
