--- a/app/globals.css
+++ b/app/globals.css
@@ -84,3 +84,33 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+@keyframes blowUpOpen {
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes blowUpClose {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+}
+
+.blow-up {
+  animation: blowUpOpen 0.3s ease-out forwards;
+}
+
+.blow-down {
+  animation: blowUpClose 0.3s ease-in forwards;
+}
